force-app/main/default/objects/Lead/fields/Account_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Reference_Number__c</fullName>
    <description>Links the Lead to a specific Account Number</description>
    <label>Account Reference Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>