force-app/main/default/objects/Lead/fields/Account_Reference_Number_Lgt__c.field-meta.xml
<CustomField>
    <fullName>Account_Reference_Number_Lgt__c</fullName>
    <formula>Account_Reference__r.Account_Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Reference Number</label>
    <type>Text</type>
</CustomField>