force-app/main/default/objects/Lead/fields/Boutique_Private_Viewing__c.field-meta.xml
<CustomField>
    <fullName>Boutique_Private_Viewing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>B2T - MICE Capture Field</description>
    <label>Boutique Private Viewing</label>
    <type>Checkbox</type>
</CustomField>