force-app/main/default/objects/Lead/fields/Coach_Tour_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Coach_Tour_Company_Name__c</fullName>
    <description>(B2T) MICE Capture Field</description>
    <label>Coach Tour Company Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>