force-app/main/default/objects/Lead/fields/Coach_Tour_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Coach_Tour_Contact_Email__c</fullName>
    <description>(B2T) MICE capture Field</description>
    <label>Coach Tour Contact Email</label>
    <type>Email</type>
</CustomField>