force-app/main/default/objects/Lead/fields/Coach_Tour_Phone__c.field-meta.xml
<CustomField>
    <fullName>Coach_Tour_Phone__c</fullName>
    <description>(B2T)</description>
    <label>Coach Tour Phone</label>
    <type>Phone</type>
</CustomField>