force-app/main/default/objects/Lead/fields/Corporate__c.field-meta.xml
<CustomField>
    <fullName>Corporate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate?</label>
    <type>Checkbox</type>
</CustomField>