force-app/main/default/objects/Lead/fields/Create_Group_Booking__c.field-meta.xml
<CustomField>
    <fullName>Create_Group_Booking__c</fullName>
    <defaultValue>true</defaultValue>
    <description>(B2T) Controls whether a group booking record is created</description>
    <inlineHelpText>Uncheck this field if you do not want to create a Group booking when this lead is converted.</inlineHelpText>
    <label>Create Group Booking</label>
    <type>Checkbox</type>
</CustomField>