force-app/main/default/objects/Lead/fields/Expected_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Expected_Arrival__c</fullName>
    <description>(B2T) Will be transferred to the Group Booking Object</description>
    <inlineHelpText>This Time the booker entered on the web form</inlineHelpText>
    <label>Expected Arrival</label>
    <type>DateTime</type>
</CustomField>