force-app/main/default/objects/Lead/fields/Expected_Departure__c.field-meta.xml
<CustomField>
    <fullName>Expected_Departure__c</fullName>
    <description>(B2T) MICE web capture field</description>
    <label>Expected Departure</label>
    <type>DateTime</type>
</CustomField>