force-app/main/default/objects/Lead/fields/Food_Beverage__c.field-meta.xml
<CustomField>
    <fullName>Food_Beverage__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(B2T) MICE Capture Field</description>
    <label>Food &amp; Beverage</label>
    <type>Checkbox</type>
</CustomField>