force-app/main/default/objects/Lead/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(B2T) MICE Capture Field</description>
    <label>Gift</label>
    <type>Checkbox</type>
</CustomField>