force-app/main/default/objects/Lead/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <description>(B2T) will be transferred to the Group Booking object</description>
    <label>Group Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>MICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>