force-app/main/default/objects/Lead/fields/Inbound_Coach_Operator__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Coach_Operator__c</fullName>
    <description>(B2T) MICE Capture Field</description>
    <label>Inbound Coach Operator</label>
    <length>50</length>
    <type>Text</type>
</CustomField>