force-app/main/default/objects/Lead/fields/MICE_Contact__c.field-meta.xml
<CustomField>
    <fullName>MICE_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(B2T) this field should be checked if the lead came from a MICE web lead form. It will be mapped to the contact record in the conversion process.</description>
    <label>MICE Contact</label>
    <type>Checkbox</type>
</CustomField>