force-app/main/default/objects/Lead/fields/Name_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Event__c</fullName>
    <description>(B2T) The name of the event that will be transferred to the Group Booking</description>
    <label>Name of Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>