force-app/main/default/objects/Lead/fields/Notes_and_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_and_Additional_Comments__c</fullName>
    <description>(B2T) MICE Capture Field</description>
    <label>Notes and Additional Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>