force-app/main/default/objects/Lead/fields/Number_of_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Visitors__c</fullName>
    <description>(B2T) MICE Capture field</description>
    <label>Expected Number of Visitors</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>