force-app/main/default/objects/Lead/fields/Passengers_Expected__c.field-meta.xml
<CustomField>
    <fullName>Passengers_Expected__c</fullName>
    <description>(B2T) Mice capture Field</description>
    <label>Passengers Expected</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>