force-app/main/default/objects/Lead/fields/Post_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Post_Opt_Out__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Post Opt Out</label>
    <type>Checkbox</type>
</CustomField>