force-app/main/default/objects/Lead/fields/PrivacyPolicyConfirmed__c.field-meta.xml
<CustomField>
    <fullName>PrivacyPolicyConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(B2T) MICE Capture Field</description>
    <label>PrivacyPolicyConfirmed</label>
    <type>Checkbox</type>
</CustomField>