force-app/main/default/objects/Lead/fields/Quick_Convert__c.field-meta.xml
<CustomField>
    <fullName>Quick_Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quick Convert</label>
    <type>Checkbox</type>
</CustomField>