force-app/main/default/objects/Lead/fields/Relevant_Villages__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Villages__c</fullName>
    <description>(B2T) NOT a MICE Field</description>
    <label>Relevant Villages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bicester</fullName>
            </value>
            <value>
                <fullName>All Villages</fullName>
            </value>
            <value>
                <fullName>Fidenza</fullName>
            </value>
            <value>
                <fullName>Ingolstadt</fullName>
            </value>
            <value>
                <fullName>Kildare</fullName>
            </value>
            <value>
                <fullName>La Roca</fullName>
            </value>
            <value>
                <fullName>Las Rozas</fullName>
            </value>
            <value>
                <fullName>La Vallee</fullName>
            </value>
            <value>
                <fullName>Maasmechelen</fullName>
            </value>
            <value>
                <fullName>Shanghai</fullName>
            </value>
            <value>
                <fullName>Suzhou</fullName>
            </value>
            <value>
                <fullName>Wertheim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>