force-app/main/default/objects/Lead/fields/Reverted_from_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Reverted_from_Account_ID__c</fullName>
    <label>Reverted from Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>