force-app/main/default/objects/Lead/fields/Secondary_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Email_Address__c</fullName>
    <description>If the booking is not converting because of duplication issues, move the email address into this field</description>
    <inlineHelpText>If the booking is not converting because of duplication issues, move the email address into this field</inlineHelpText>
    <label>Secondary Email Address</label>
    <type>Email</type>
</CustomField>