force-app/main/default/objects/Lead/fields/Secondary_MICE_Contact_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Secondary_MICE_Contact_Address_3__c</fullName>
    <description>(B2T) MICE Capture Field</description>
    <label>Secondary Contact Address 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>