force-app/main/default/objects/Lead/fields/Secondary_MICE_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Secondary_MICE_Contact_Email__c</fullName>
    <description>(B2T) MICE Capture Field</description>
    <label>Secondary Contact Email</label>
    <type>Email</type>
</CustomField>