force-app/main/default/objects/Lead/fields/Secondary_MICE_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_MICE_Contact_First_Name__c</fullName>
    <description>(B2T) MICE Capture Field</description>
    <label>Secondary Contact First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>