force-app/main/default/objects/Lead/fields/Secondary_MICE_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_MICE_Contact_Phone__c</fullName>
    <description>(B2T)</description>
    <label>Secondary Contact Phone</label>
    <type>Phone</type>
</CustomField>