force-app/main/default/objects/Lead/fields/Secondary_MICE_Contact_State__c.field-meta.xml
<CustomField>
    <fullName>Secondary_MICE_Contact_State__c</fullName>
    <description>(B2T)</description>
    <label>Secondary Contact State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>