force-app/main/default/objects/Lead/fields/Secondary_MICE_Contact_Town_City__c.field-meta.xml
<CustomField>
    <fullName>Secondary_MICE_Contact_Town_City__c</fullName>
    <description>(B2T)</description>
    <label>Secondary Contact Town/City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>