force-app/main/default/objects/Lead/fields/Secondary_MICE_Org_or_Agency_name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_MICE_Org_or_Agency_name__c</fullName>
    <description>(B2T) MICE Capture Field</description>
    <label>Secondary Org or Agency name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>