force-app/main/default/objects/Lead/fields/Tour_Leader_or_Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Tour_Leader_or_Driver_Name__c</fullName>
    <description>(B2T) MICE Capture Field</description>
    <label>Tour Leader or Driver Name</label>
    <length>55</length>
    <type>Text</type>
</CustomField>