force-app/main/default/objects/Lead/fields/Transport_Required__c.field-meta.xml
<CustomField>
    <fullName>Transport_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>(B2T) MICE Capture Field</description>
    <label>Transport Required</label>
    <type>Checkbox</type>
</CustomField>