force-app/main/default/objects/Lead/fields/Type_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Business__c</fullName>
    <label>Type of Business</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Attraction park</fullName>
            </value>
            <value>
                <fullName>Automobile Association</fullName>
            </value>
            <value>
                <fullName>Brochure Distribution</fullName>
            </value>
            <value>
                <fullName>Business Travel arranger</fullName>
            </value>
            <value>
                <fullName>Camping</fullName>
            </value>
            <value>
                <fullName>Car rental</fullName>
            </value>
            <value>
                <fullName>Coach operator</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Cruise company</fullName>
            </value>
            <value>
                <fullName>DMO</fullName>
            </value>
            <value>
                <fullName>Event Agency</fullName>
            </value>
            <value>
                <fullName>Excursionist</fullName>
            </value>
            <value>
                <fullName>Gay travel specialists</fullName>
            </value>
            <value>
                <fullName>General Sales Agent</fullName>
            </value>
            <value>
                <fullName>Golf &amp; Country Club</fullName>
            </value>
            <value>
                <fullName>Government body</fullName>
            </value>
            <value>
                <fullName>Hotel/Hotel Chain</fullName>
            </value>
            <value>
                <fullName>Hotel Association</fullName>
            </value>
            <value>
                <fullName>Incentive Travel Organiser</fullName>
            </value>
            <value>
                <fullName>Incoming Agency</fullName>
            </value>
            <value>
                <fullName>Incoming Operator</fullName>
            </value>
            <value>
                <fullName>Incoming specialist</fullName>
            </value>
            <value>
                <fullName>Limousine Cie</fullName>
            </value>
            <value>
                <fullName>MICE location</fullName>
            </value>
            <value>
                <fullName>MICE specialists</fullName>
            </value>
            <value>
                <fullName>National Tourist Board</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>