force-app/main/default/objects/Lead/fields/VIP_Lounge_Access__c.field-meta.xml
<CustomField>
    <fullName>VIP_Lounge_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>B2T - Mice Capture Field</description>
    <label>VIP Lounge Access</label>
    <type>Checkbox</type>
</CustomField>